# Xylene

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Lang.cpp  README.md  TODO.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  ast_8cpp.html  ast_8cpp.js  ast_8cpp__incl.map  ast_8cpp__incl.md5  ast_8hpp.html  ast_8hpp.js  ast_8hpp__dep__incl.map  ast_8hpp__dep__incl.md5  ast_8hpp__incl.map  ast_8hpp__incl.md5  ast_8hpp_source.html  ast_8overrides_8cpp.html  ast_8overrides_8cpp__incl.map  ast_8overrides_8cpp__incl.md5  base_parser_8hpp__dep__incl.map  base_parser_8hpp__incl.map  base_parser_8hpp__incl.md5  base_parser_8hpp_source.html  builtins.cpp  builtins.h  class_a_s_t-members.html  class_a_s_t.html  class_a_s_t_node-members.html  class_a_s_t_node.html  class_a_s_t_node.js  class_a_s_t_node__coll__graph.map  class_a_s_t_node__coll__graph.md5  class_a_s_t_node__inherit__graph.md5  class_a_s_t_printer-members.html  class_a_s_t_printer.html  (+643 more)
docs/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  ast_8cpp.html  ast_8cpp.js  ast_8cpp__incl.map  ast_8cpp__incl.md5  ast_8hpp.html  ast_8hpp.js  ast_8hpp__dep__incl.map  ast_8hpp__dep__incl.md5  ast_8hpp__incl.map  ast_8hpp__incl.md5  ast_8hpp_source.html  ast_8overrides_8cpp.html  ast_8overrides_8cpp.js  ast_8overrides_8cpp__incl.map  ast_8overrides_8cpp__incl.md5  base_parser_8hpp.html  base_parser_8hpp__dep__incl.map  base_parser_8hpp__dep__incl.md5  base_parser_8hpp__incl.map  base_parser_8hpp__incl.md5  base_parser_8hpp_source.html  class_a_s_t-members.html  class_a_s_t.html  class_a_s_t.js  class_a_s_t_node-members.html  class_a_s_t_node.html  class_a_s_t_node.js  class_a_s_t_node__coll__graph.md5  class_a_s_t_node__inherit__graph.map  class_a_s_t_node__inherit__graph.md5  class_a_s_t_visitor-members.html  class_a_s_t_visitor.html  class_a_s_t_visitor.js  class_a_s_t_visitor__inherit__graph.map  class_a_s_t_visitor__inherit__graph.md5  class_abstract_id-members.html  class_abstract_id.html  (+851 more)
docs/html/: --example.html  _boolean-example.html  annotated.html  ast_8cpp.html  ast_8hpp.html  ast_8hpp_source.html  base_parser_8hpp.html  base_parser_8hpp_source.html  class_a_s_t-members.html  class_a_s_t.html  class_a_s_t.js  class_a_s_t_visitor.html  class_base_parser.html  class_block_node-members.html  class_block_node.js  class_block_parser.html  class_boolean.html  class_boolean.js  class_branch_node.html  class_compile_visitor-members.html  class_compile_visitor.html  class_compile_visitor.js  class_declaration_node.html  class_declaration_parser-members.html  class_declaration_parser.js  class_definite_type_info-members.html  class_error-members.html  class_error.html  class_expression_node-members.html  class_expression_parser-members.html  class_expression_parser.js  class_float-members.html  class_float.js  class_function_signature.html  class_function_type_info-members.html  class_function_type_info.html  class_integer.html  (+108 more)
include/: ast.hpp  lexer.hpp  operator.hpp  token.hpp  tokenType.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_a.js  classes_c.js  classes_e.js  defines_1.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_9.js  enums_4.js  enums_5.js  enumvalues_1.js  (+57 more)
src/: CMakeLists.txt  Lang.cpp  ast.cpp  ast.hpp  ast.overrides.cpp  builtins.cpp  builtins.h  builtins.hpp  builtins.tpp  error.hpp  functions.cpp  functions.hpp  global.cpp  global.h  global.hpp  global.tpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  nodes.cpp  nodes.h  nodes.hpp  object.hpp  objects.hpp  operator.cpp  operator.hpp  operatorMap.hpp  operator_maps.cpp  operator_maps.hpp  operators.cpp  operators.h  operators.hpp  parser.hpp  scope.hpp  std_is_missing_stuff.hpp  token.cpp  token.hpp  tokenType.cpp  tokens.cpp  (+4 more)
src/interpreter/: interpreter.hpp  object.hpp  operatorMap.hpp  scope.hpp
src/llvm/: codegen.cpp  compiler.cpp  compiler.hpp  globalTypes.cpp  globalTypes.hpp  operatorCodegen.cpp  operatorCodegen.hpp  runner.cpp  type.cpp  typeData.cpp  typeId.cpp  values.cpp
src/parser/: baseParser.hpp  tokenParser.cpp  tokenParser.hpp  xmlParser.cpp  xmlParser.hpp
src/runtime/: io.cpp  runtime.cpp
src/utils/: error.cpp  error.hpp  suppressWarnings.hpp  trace.cpp  typeInfo.cpp  typeInfo.hpp  util.cpp  util.hpp  util.tpp
tests/: CMakeLists.txt  cli.js  e2e.cpp  lexerTest.cpp  lexerTest.hpp  llvmTest.cpp  llvmTest.hpp  main.cpp  package.json  parserTest.cpp  parserTest.hpp  test.hpp  utilTest.cpp  utilTest.hpp
tests/data/: declarations.xml  if_statement.xml  simple_return.xml  trivial_expr.xml
tests/data/end-to-end/: alphabet.xylene  rule110.xyl
tests/data/llvm/: assign_to_literal.xml  else-if.xml  else_if.xml  exit_code.xml  if-else.xml  if.xml  if_else.xml  multiple_declare.xml  primitive.xml  return_assign.xml  simple_type.xml  stored_return.xml  stupid_return.xml
tests/data/llvm/declarations/: multiple_declare.xml  multiple_type_mismatch.xml  simple_type_mismatch.xml
tests/data/llvm/function_calls/: 1_arg_valid.xml  2_args_valid.xml  3_args_valid.xml
tests/data/llvm/functions/: foreign.xml  function.xml  no_args.xml  void_ret.xml
tests/data/llvm/loops/: complete.xml  no_condition.xml  no_init.xml  no_update.xml
tests/data/llvm/types/: simple_type.xml  static_method.xml
tests/data/parser/: declarations.xml  expr_with_ident.xml  for_loop.xml  if_statement.xml  simple_expr.xml  simple_return.xml  type_complete.xml  unary.xml
tests/data/parser/expr/: parens_unaries.xml
tests/data/parser/expr/calls/: 2_args.xml  after_postfix.xml  expression_args.xml  no_args.xml  one_expr_arg.xml  one_terminal_arg.xml
tests/data/parser/for_loops/: 2_updates.xml  3_updates.xml  for_loop.xml  no_updates.xml
tests/data/parser/functions/: anon.xml  complete.xml  foreign.xml  no_args.xml  plain.xml  void_ret.xml
(+212 files in other folders)
